--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
             <div id="anhThe"></div>
             <div id="gioiThieu">
                 <p>Em là Trần Thế Bảo hiện đang là sinh viên năm 2 của học viện bưu chính viễn thông chuyên ngành công nghệ đa phương tiện. Hiện sinh sống và học tập tại 97 Man Thiện, Phường Tăng Nhơn Phú B, TP.Thủ Đức, Hồ Chí Minh.
-                </p>
+                </p>r
             </div>
         </div>
 
         <div class="second">
             <div id="ten">Trần Thế Bảo 29/09/2003</div>
             <div class="khung" >
-                <a href="mailto:someone@example.com" target="_blank"> <!--target="_blank":thì nó sẽ mở liên kết trên tab mới-->
+                <a href="https://docs.google.com/document/d/1Cn2LzUGKK1JDiX6xNOH28ZhXs0rIl0fX2UjRLKE22O4/edit?usp=sharing" target="_blank"> <!--target="_blank":thì nó sẽ mở liên kết trên tab mới-->
                     <div id="gmail"></div>
                 </a>
                 
